--- a/.github/workflows/generate.yml
+++ b/.github/workflows/generate.yml
@@ -2,12 +2,13 @@ name: Indie Game Article Generator
 
 on:
   schedule:
-    - cron: '0 3 * * 1' # 毎週月曜 03:00 UTC (12:00 JST)
+    - cron: '0 3 * * 1,4' # 月・木 03:00 UTC (12:00 JST)
   workflow_dispatch: # 手動実行も可能
 
 permissions:
-  contents: write # 記事・state.json のcommit用
-  models: read    # GitHub Models API アクセス用
+  contents: write       # 記事・state.json のcommit用
+  pull-requests: write  # PR作成用
+  models: read          # GitHub Models API アクセス用
 
 jobs:
   generate:
@@ -25,10 +26,17 @@ jobs:
         env:
           GH_MODELS_TOKEN: ${{ github.token }}
 
-      - name: Commit generated articles
-        run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add content/ state.json
-          git diff --cached --quiet || git commit -m "feat: generate new indie game articles"
-          git push
+      - name: Create Pull Request
+        uses: peter-evans/create-pull-request@v7
+        with:
+          branch: auto/indie-game-articles
+          commit-message: 'feat: generate new indie game articles'
+          title: 'Auto: インディーゲーム記事更新'
+          body: |
+            GitHub Actions による自動生成記事の更新です。
+            内容を確認のうえマージしてください。
+          labels: auto-generated
+          add-paths: |
+            src/content/
+            state.json
+          delete-branch: true
