--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,16 @@
 {
+  "extends": "astro/tsconfigs/strict",
   "compilerOptions": {
     "strict": true,
     "target": "ES2022",
     "module": "Node16",
     "moduleResolution": "Node16",
     "outDir": "./dist",
-    "rootDir": "./src",
+    "rootDir": ".",
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true
   },
-  "include": ["src/**/*"]
+  "include": ["src/**/*"],
+  "exclude": ["src/content.config.ts", "src/pages/**", "src/layouts/**", "src/components/**"]
 }
